--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -132,70 +132,99 @@ block content
 					//- p.heading__sub	
 			.row
 				.col-md-10.col-md-offset-1
+					#jmbio.collapse
+						h2 Jasper Matthews M.Ed. - Host/Executive Producer
+						p 
+						| Jasper obtained a BA in both Sociology and African American Studies from the University of New Mexico in 1998. He received an MA in K-12 Special Education from the College of Santa Fe - Albuquerque in 2002. His program and Master's Thesis centered on charter administration and management. He is currently a PhD candidate in Educational Leadership at Capella University. His research focus is Response to Intervention (RtI), school reform and closing the achievement gap. During his six years of administrative experience, he served as the Assistant Principal of Valencia High School, Assistant Principal of Horizon Academy Northwest Charter School, Assistant Principal at Armijo Elementary School and served as the Dean of Students at Horizon Academy South. Jasper has been in education a total of 18 years and has served as an Educational Assistant, Special Education Teacher, Dean of Students, Assistant Principal and Director/Principal. In addition, Jasper is the Founder/Executive Director of The GREAT Academy – Albuquerque, which is in its fifth successful year.
+				.col-md-10.col-md-offset-1
+					#kmbio.collapse
+						h2 Keisha Matthews M.Ed. - Host/Executive Producer
+						p 
+						| Keisha obtained a BA in Psychology from the University of Nebraska at Omaha in 2002. She went on to earn an MA in Curriculum/Instructional Leadership from the College of Santa Fe - Albuquerque in 2004 in addition to endorsements in both Reading and TESOL. As an Instructor/Facilitator for MA and undergraduate level courses at the University of Phoenix, she taught courses in Reading/Assessment Methods, Linguistics and ELL strategies. She has been in education for a total of fifteen years. Keisha has served as a Teacher/Special Education Teacher in grades ranging from 3rd - 8th and also served as an Instructional Coach/Reading Specialist at Horizon Academy West for two years. Keisha has served as the Director of Academics and co-founder of The GREAT Academy, since its inception, five years ago. 
+				.col-md-10.col-md-offset-1
+					#dpbio.collapse
+						h2 Danielle Provo - Producer
+						p 
+						| Danielle has served as Director of Operations for The GREAT Academy Foundation since July 2014. She attended Louisiana State University and then Central New Mexico Community College, where she earned her Associate of Arts Degree in Communication. She will finish her undergraduate degree in Organizational Leadership at the University of New Mexico. Her duties in this position have included but are not limited to, Marketing and Recruitment, Student Activities Coordination, Fundraising, and Service Learning coordination. She has a strong passion for working with youth and community outreach, and hopes to broaden this work through the Foundation and Ask The Principal. 
+				.col-md-10.col-md-offset-1
+					#dgbio.collapse
+						h2 Denise Garcia - Producer
+						p 
+						| Denise is currently the business office support, health assistant and health lab coordinator for The GREAT Academy. Born and raised in the Philippines, she, along with her family, migrated to United States of America. She graduated Bachelors of Science in Nursing April 2012 and also passed the Philippine Nursing Licensure Exam in order for her to be a registered nurse. Before joining The GREAT Academy, she worked 2 years in retail where she became a part of the Management Team. She has been with The GREAT Academy for over a year now. Denise also speaks fluent English and Tagalog (one of the languages in the Philippines.) 
+				.col-md-10.col-md-offset-1
 					.row
 						.col-lg-3.col-sm-6.col-xs-8.col-xs-offset-2.col-sm-offset-0
 							.team__item
-								a#jmbutton(role='button' data-toggle='collapse' href='#jmbio' aria-expanded="false" aria-controls='collapseExample')
+								a#jmbutton(href="#jmbio")
 									.team-item__img
 										img.btn-block.img-responsive(src='images/JM Individual.jpg', alt='Photo of Jasper Matthews')
+										.portfolio-item__mask.text-center
+											.portfolio-item-mask__content
+												i#fa-mask.fa.fa-search
 								.row
 									.col-xs-6
 										.team-item__name Jasper Matthews M.Ed.
 										.team-item__position Host/Executive Producer
 									.col-xs-6
 										.team-item__contact
-											a.team-item-contact__link(href='mailto:jmatthews@thegreatacademy.org')
+											a.team-item-contact__link(href='mailto:jmatthews@thegreatacademy.org' target='_blank')
 												i.fa.fa-envelope-o
 											.clearfix
-						.col-lg-9.col-sm-6.col-xs-8.col-xs-offset-2.col-sm-offset-0
-							#jmbio.collapse
-								.well
-									h2 Jasper Matthews M.Ed. - Host/Executive Producer
-									p 
-									| Jasper obtained a BA in both Sociology and African American Studies from the University of New Mexico in 1998. He received an MA in K-12 Special Education from the College of Santa Fe - Albuquerque in 2002. His program and Master's Thesis centered on charter administration and management. He is currently a PhD candidate in Educational Leadership at Capella University. His research focus is Response to Intervention (RtI), school reform and closing the achievement gap. During his six years of administrative experience, he served as the Assistant Principal of Valencia High School, Assistant Principal of Horizon Academy Northwest Charter School, Assistant Principal at Armijo Elementary School and served as the Dean of Students at Horizon Academy South. Jasper has been in education a total of 18 years and has served as an Educational Assistant, Special Education Teacher, Dean of Students, Assistant Principal and Director/Principal. In addition, Jasper is the Founder/Executive Director of The GREAT Academy – Albuquerque, which is in its fifth successful year.
 						.col-lg-3.col-sm-6.col-xs-8.col-xs-offset-2.col-sm-offset-0
 							.team__item
-								.team-item__img
-									img.btn-block.img-responsive(src='images/KM Individual.jpg', alt='Photo of Keisha Matthews')
+								a#kmbutton(href="#kmbio")
+									.team-item__img
+										img.btn-block.img-responsive(src='images/KM Individual.jpg', alt='Photo of Keisha Matthews')
+										.portfolio-item__mask.text-center
+											.portfolio-item-mask__content
+												i#fa-mask.fa.fa-search
 								.row
 									.col-xs-6
 										.team-item__name Keisha Matthews M.Ed.
 										.team-item__position Host/Executive Producer
 									.col-xs-6
 										.team-item__contact
-											a.team-item-contact__link(href='mailto:kmatthews@thegreatacademy.org')
+											a.team-item-contact__link(href='mailto:kmatthews@thegreatacademy.org' target='_blank')
 												i.fa.fa-envelope-o
 											.clearfix
 						.col-lg-3.col-sm-6.col-xs-8.col-xs-offset-2.col-sm-offset-0
 							.team__item
-								.team-item__img
-									img.btn-block.img-responsive(src='images/DP Individual.jpg', alt='Photo of Danielle Provo')
-								.row
-									.col-xs-6
-										.team-item__name Danielle Provo
-										.team-item__position Producer
-									.col-xs-6
-										.team-item__contact
-											a.team-item-contact__link(href='mailto:dprovo@thegreatacademy.org')
-												i.fa.fa-envelope-o
-											.clearfix
+								a#dpbutton(href="#dpbio")
+									.team-item__img
+										img.btn-block.img-responsive(src='images/DP Individual.jpg', alt='Photo of Danielle Provo')
+										.portfolio-item__mask.text-center
+											.portfolio-item-mask__content
+												i#fa-mask.fa.fa-search
+									.row
+										.col-xs-6
+											.team-item__name Danielle Provo
+											.team-item__position Producer
+										.col-xs-6
+											.team-item__contact
+												a.team-item-contact__link(href='mailto:dprovo@thegreatacademy.org' target='_blank')
+													i.fa.fa-envelope-o
+												.clearfix
 						.col-lg-3.col-sm-6.col-xs-8.col-xs-offset-2.col-sm-offset-0
 							.team__item
-								.team-item__img
-									img.btn-block.img-responsive(src='images/DG Individual.jpg', alt='Photo of Denise Garcia')
-								.row
-									.col-xs-6
-										.team-item__name Denise Garcia
-										.team-item__position Producer
-									.col-xs-6
-										.team-item__contact
-											a.team-item-contact__link(href='mailto:degarcia@thegreatacademy.org')
-												i.fa.fa-envelope-o
-											.clearfix
+								a#dgbutton(href="#dgbio")
+									.team-item__img
+										img.btn-block.img-responsive(src='images/DG Individual.jpg', alt='Photo of Denise Garcia')
+										.portfolio-item__mask.text-center
+											.portfolio-item-mask__content
+												i#fa-mask.fa.fa-search
+									.row
+										.col-xs-6
+											.team-item__name Denise Garcia
+											.team-item__position Producer
+										.col-xs-6
+											.team-item__contact
+												a.team-item-contact__link(href='mailto:degarcia@thegreatacademy.org' target='_blank')
+													i.fa.fa-envelope-o
+												.clearfix
 	.container
 		.row.padding
 			//- Login and under Construction section
-			.col-xs-6
+			.col-xs-10.col-xs-offset-1.text-center
 				if user && user.canAccessKeystone
 					p
 						a(href='/keystone/signin').btn.btn-default.btn-primary Open Admin Panel
@@ -203,7 +232,3 @@ block content
 					p
 						a(href='/keystone/signin', style='margin-right: 10px').btn.btn-lg.btn-primary Sign in
 						span.hidden-xs to Admin Panel
-			.col-xs-6
-				.row
-					.col-xs-4.pull-right
-						img(src="/images/lego.png", alt='Lego Construction Man from Lego Movie', data-toggle='tooltip', data-placement='top', title='SITE UNDER CONSTRUCTION. Check back soon for new features!').lego
