footer bg color for mobile

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -586,7 +586,7 @@ footer a {
 
 @media (max-width: @screen-xs-min) {
 	#footer {
-		// background-color: #fff;
+		background-color: #fff;
 		height: 165px;
 	}
 
