--- a/templates/views/gallery.jade
+++ b/templates/views/gallery.jade
@@ -14,7 +14,7 @@ block content
 				
 				.row.gallery-images
 					if gallery.heroImage.exists
-						.col-sm-4.col-md-4.gallery-image: img(src=gallery._.heroImage.limit(680,680)).img-rounded
+						.col-sm-4.col-md-4.gallery-image: img(src=gallery._.heroImage.limit(680,680)).img-responsive.img-rounded
 						.col-sm-8.col-md-8: .row
 							each image in gallery.images
 								.col-xs-4.col-sm-4.col-md-3.gallery-image: img(src=image.limit(300,300)).img-responsive.img-rounded
